--- a/src/blocks/elements.css
+++ b/src/blocks/elements.css
@@ -40,6 +40,9 @@
   margin-right: 15px;
   cursor: pointer;
 }
+.elements-card__element_trash_hiden {
+  visibility: hidden;
+}
 .elements-card__element_trash:hover {
   opacity: 0.5;
 }
