--- a/src/blocks/PopupWithConfirmation.css
+++ b/src/blocks/PopupWithConfirmation.css
@@ -1,12 +1,12 @@
-.popupDelate {
+.popup_confirmation {
   display: none;
   position: fixed;
   justify-content: center;
   flex-direction: column;
   margin: auto;
   z-index: 1000;
-  left: 0;
-  top: 0;
+  left: 0%;
+  top: 30%;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -18,7 +18,7 @@
   top: 40%;
   left: 30%;
 }
-.popupDelate__fieldset {
+.popup__container_confirmation {
   width: 430px;
   height: 181px;
   margin: auto;
@@ -28,6 +28,7 @@
   background-color: white;
   border-radius: 10px;
 }
+
 .popupDelate__buttonClose {
   position: absolute;
   max-width: 33px;
@@ -36,13 +37,23 @@
   right: -40px;
   top: -40px;
 }
+.popup__title_confirmation {
+  max-width: 330px;
+  width: 100%;
+  height: 23px;
+  font-size: 24px;
+  font-weight: 900;
+  margin: 0 36px 0;
+  border-bottom: 0;
+  justify-content: start;
+}
 .popupDelate__shure {
   margin: 34px auto 38px;
   max-width: 358px;
   max-height: 23px;
 }
-.popupDelate__button {
-  margin: 0 36px 36px;
+.popup__info_submit_confirmation {
+  margin: 38px 36px 36px;
   max-width: 358px;
   width: 100%;
   max-height: 50px;
