Correcciones con sebas

--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,4 @@
 @import url(./blocks/popup_image.css);
 @import url(./blocks/PopupWithConfirmation.css);
 @import url(./blocks/popupChangePicture.css);
-@import url(./blocks/form);
+@import url(./blocks/form.css);
