--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,4 @@
 @import url(./blocks/PopupWithConfirmation.css);
 @import url(./blocks/popupChangePicture.css);
 @import url(./blocks/form.css);
+@import url(./blocks/login.css);
